[project]
name = "esg-risk-score"
version = "0.1.0"
description = ""
authors = [
    {name = "manelnh"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "uvicorn (>=0.38.0,<0.39.0)",
    "fastapi (>=0.122.0,<0.123.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "requests (>=2.32.5,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
